; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_usr.c_smb_usr_vcspec_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netsmb/extr_smb_usr.c_smb_usr_vcspec_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smb_vcspec = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smb_vcspec*)* @smb_usr_vcspec_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smb_usr_vcspec_free(%struct.smb_vcspec* %0) #0 {
  %2 = alloca %struct.smb_vcspec*, align 8
  store %struct.smb_vcspec* %0, %struct.smb_vcspec** %2, align 8
  %3 = load %struct.smb_vcspec*, %struct.smb_vcspec** %2, align 8
  %4 = getelementptr inbounds %struct.smb_vcspec, %struct.smb_vcspec* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.smb_vcspec*, %struct.smb_vcspec** %2, align 8
  %9 = getelementptr inbounds %struct.smb_vcspec, %struct.smb_vcspec* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @smb_memfree(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.smb_vcspec*, %struct.smb_vcspec** %2, align 8
  %14 = getelementptr inbounds %struct.smb_vcspec, %struct.smb_vcspec* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.smb_vcspec*, %struct.smb_vcspec** %2, align 8
  %19 = getelementptr inbounds %struct.smb_vcspec, %struct.smb_vcspec* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @smb_memfree(i64 %20)
  br label %22

22:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @smb_memfree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
